[package]
name = "distributed-topic-tracker"
description = "auto bootstrap for iroh-gossip topics"
license = "MIT"
authors = ["Zacharias Boehler <rustonbsd@mailfence.com>"]
repository = "https://github.com/rustonbsd/distributed-topic-tracker"
homepage = "https://rustonbsd.github.io/2025/09/03/distributed-topic-tracker.html"
readme = "README.md"
keywords = ["networking"]
categories = ["network-programming"]
version = "0.1.6"
edition = "2024"


[dependencies]
sha2 = "0.10"
anyhow = "1"
z32 = "1"
hmac = "0.12"
primitive-types = "0.13"

curve25519-dalek = { version = "4.1" }
ed25519-dalek = { version = "2.2" }
ed25519-dalek-hpke = { version = "0.0.4" }

tokio = { version = "1", features = ["full","sync"] }
iroh = { version = "0.91" }
iroh-gossip = { version = "0.91" }
futures = "0.3"

chrono = "0.4"
once_cell = "1"

mainline = "5.4"
rand = "0.8"